tests/init_state/move_and_drop/drop_consumes_like_move.err.expected
error: at 6:13: [INIT-UseAfterMove] In function 'f', block 'entry': variable 'x' is used after move
   |
 6 |             y = copy x;
   |             ^^^^^^^^^^
